applied basic grid with media query sample

--- a/sass/utilities/_vendor.scss
+++ b/sass/utilities/_vendor.scss
@@ -5,4 +5,18 @@
 // Convert vendor styles to SCSS (basically just change the extension
 // to ".scss" and add "_" to the beginning) and import them here.
 
+
+// ==========================================================================
+// $Bourbon
+// ==========================================================================
 @import 'vendor/bourbon/bourbon';
+
+// ==========================================================================
+// $Grid-settings
+// ==========================================================================
+@import '../layouts/grid-settings';
+
+// ==========================================================================
+// $Neat
+// ==========================================================================
+@import 'vendor/neat/neat';
