--- a/sass/layouts/_index.scss
+++ b/sass/layouts/_index.scss
@@ -5,3 +5,9 @@
 // styled using ID selectors but take the time to think about the elements
 // that are common across all components of the page and use class selectors
 // where appropriate.
+
+
+// ==========================================================================
+// $Home
+// ==========================================================================
+@import 'home';
